--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@radix-ui/react-label": "^2.0.2",
     "@tabler/icons-react": "^3.3.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.1.8",
+    "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.2.1",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0"
   },
