--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^2.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@tabler/icons-react": "^3.3.0",
     "clsx": "^2.1.1",
